--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@mantine/code-highlight": "^7.5.1",
     "@mantine/core": "7.5.1",
+    "@mantine/form": "^7.5.1",
     "@mantine/hooks": "7.5.1",
     "@mantinex/mantine-logo": "^1.0.1",
     "@next/bundle-analyzer": "^14.0.1",
